--- a/ECE180_S21_HW4_Part2.ipynb
+++ b/ECE180_S21_HW4_Part2.ipynb
@@ -6,7 +6,7 @@
       "name": "ECE180-S21-HW4-Part2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPiid7T5Wv6lDzsec3amVJt",
+      "authorship_tag": "ABX9TyOmr1yGRkEC+WbnvnG6Dw2S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -171,10 +171,10 @@
         "  return np.array(batch[b'labels']), np.array(batch[b'data'].astype('int64'))\n",
         "\n",
         "\n",
-        "train_labels, train_data = load_data('data_batch_1')\n",
-        "test_labels, test_data = load_data('test_batch')\n",
+        "train_labels, train_data = load_data('data_batch_1')  # change train data batch here\n",
+        "test_labels, test_data = load_data('test_batch')  # change test data batch here\n",
         "\n",
-        "NUMBER_OF_SAMPLES = 1000\n",
+        "NUMBER_OF_SAMPLES = 1000  \n",
         "test_data = test_data[0:NUMBER_OF_SAMPLES]\n",
         "test_labels = test_labels[0:NUMBER_OF_SAMPLES]"
       ],
@@ -314,13 +314,31 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZY5Th3Soe42R"
+      },
+      "source": [
+        "The error rate seems to decrease as the k increases but this is not always the case. That k doesn't always correlate with the drop of error rate is because the data and the number of samples in the data could be weirdly distributed and result in a different clusterings (hence not always one same cluster)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eQfaZP_LfY7_"
+      },
+      "source": [
+        "c) For each of the ten classes, pick a random image from test data and report its 10 nearest neighbors."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "GfH20XMvL-LB",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9d84103c-dd65-4939-ee2b-7868a9a949f2"
+        "outputId": "686ea492-c58d-4e6a-89d4-9115ccd20cf8"
       },
       "source": [
         "\n",
@@ -332,14 +350,14 @@
         "  ndx = int(np.where(test_labels==i)[0][0])\n",
         "  predicted = model.fit_specific(k, ndx, train_data, train_labels, test_data, test_labels)\n",
         "  print(f\"Closest predicted labels:\")\n",
-        "  for i in predicted:\n",
-        "    print(labels[i])\n",
+        "  for p in predicted:\n",
+        "    print(labels[p])\n",
         "  print()\n",
         "\n",
         "  \n",
         "  \n"
       ],
-      "execution_count": 33,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
